--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ p {
 }
 
 hr {
-  border: dotted #eaf6f6 6px;
+  border: dotted #F5E6CA 6px;
   border-bottom: none;
   width: 5%;
   margin: 100px auto;
